--- a/package.json
+++ b/package.json
@@ -9,23 +9,35 @@
     "explore": "gridsome explore"
   },
   "dependencies": {
+    "@gridsome/plugin-google-analytics": "^0.1.1",
     "@gridsome/source-wordpress": "^0.5.3",
     "@vue/composition-api": "^0.6.3",
+    "chart.js": "^2.9.3",
+    "flickity": "^2.2.1",
     "gridsome": "^0.7.0",
+    "gsap": "^3.4.0",
+    "jquery": "^3.5.1",
+    "lottie-web": "^5.7.1",
+    "moment": "^2.27.0",
+    "patternomaly": "^1.3.2",
+    "pdfobject": "^2.1.1",
+    "plyr": "^3.6.2",
     "portal-vue": "^2.1.7",
     "vue": "^2.6.11",
-    "vuetify": "^2.2.27",
-    "vuex": "^3.3.0"
+    "vue-carousel-3d": "^0.2.0",
+    "vuetify": "^2.3.8"
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
     "gridsome-plugin-sass-resources-loader": "^0.0.3",
-    "gridsome-plugin-tailwindcss": "^2.2.48",
+    "gridsome-plugin-tailwindcss": "^3.0.1",
     "gridsome-plugin-typescript": "^0.4.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
     "ts-loader": "^7.0.2",
     "typescript": "^3.8.3",
     "vue-loader": "^16.0.0-beta.1",
+    "vue-svg-loader": "^0.16.0",
     "vuetify-loader": "^1.4.3"
   }
 }
